152_tp_monsterstack_kustomize/k8s-deploy/base/monsterstack-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monsterstack 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
spec:
  tls:
  - hosts:
      - monsterstack.scalelaab.dopl.uk # change with your configured domain
    secretName: monsterstack-secret
  rules:
  - host: monsterstack.scalelaab.dopl.uk
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 5000
